[tool.poetry]
name = "apsystems-ez1-mqtt"
version = "0.1.0"
description = "APsystems EZ1 inverter local API gateway to MQTT, HomA and Home Assistant"
authors = ["Holger Mueller <github@euhm.de>"]
license = "TBD"
readme = "README.md"
packages = [{include = "APsystemsEZ1mqtt"}]
include = ["config-template.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
apsystems-ez1 = "^1.3.1"
paho-mqtt = "^2.1.0"
certifi = "^2024.2.2"
pyyaml = "^6.0.1"
str2bool = "^1.1"
astral = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
