[tool.poetry]
name = "apsystems-ez1-mqtt"
version = "0.2.0"
description = "APsystems EZ1 inverter local API gateway to MQTT, HomA and Home Assistant"
authors = ["Holger Mueller <github@euhm.de>"]
license = "MIT"
readme = "README.md"
include = ["config-template.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
#apsystems-ez1 = "^1.3.1"
apsystems-ez1 = "^2.3.0"
paho-mqtt = "^2.1.0"
certifi = "^2024.2.2"
pyyaml = "^6.0.1"
str2bool = "^1.1"
astral = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
