[tool.poetry]
name = "apsystems-ez1-mqtt"
version = "0.4.3"
description = "APsystems EZ1 inverter local API gateway to MQTT, HomA and Home Assistant"
authors = ["Holger Mueller <github@euhm.de>"]
license = "MIT"
readme = "README.md"
include = ["config-template.yaml"]

[tool.poetry.dependencies]
python = "^3.11"
apsystems-ez1 = "^2.6.0"
paho-mqtt = "^2.1.0"
certifi = "^2025.4.26"
pyyaml = "^6.0.1"
str2bool = "^1.1"
astral = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
